cloud/w10/temp/tenants/payments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    owner: payments-team
    tenant: payments
    policy.sigstore.dev/include: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "0"
